--- a/UnreadTabs.safariextension/Global.html
+++ b/UnreadTabs.safariextension/Global.html
@@ -9,61 +9,57 @@
 
 			var theApplication = safari.application;
 
-			theApplication.addEventListener("validate", function(theEvent) {
-				if (theEvent.command=="com.manytricks.UnreadTabs.Open") {
-					var theTarget = theEvent.target;
-					var theNumberOfURLs = theEvent.userInfo.length;
-					switch (theNumberOfURLs) {
-						case 0:
-							theTarget.disabled = true;
-							break;
-						case 1:
-							theTarget.title = "Open Unread Post in New Tab";
-							theTarget.disabled = false;
-							break;
-						default:
-							theTarget.title = "Open " + theNumberOfURLs + " Unread Posts in New Tabs";
-							theTarget.disabled = false;
-							break;
+			theApplication.addEventListener('contextmenu', function(theEvent) {
+				var theURLs = theEvent.userInfo;
+				if (theURLs) {
+					var theNumberOfURLs = theURLs.length;
+					if (theNumberOfURLs>0) {
+						theEvent.contextMenu.appendContextMenuItem(
+							'com.manytricks.UnreadTabs.Open',
+							((theNumberOfURLs==1) ? 'Open Unread Post in New Tab' : 'Open ' + theNumberOfURLs + ' Unread Posts in New Tabs')
+						);
 					}
 				}
 			}, false);
 
-			theApplication.addEventListener("command", function(theEvent) {
-				if (theEvent.command=="com.manytricks.UnreadTabs.Open") {
+			theApplication.addEventListener('command', function(theEvent) {
+				if (theEvent.command=='com.manytricks.UnreadTabs.Open') {
 					var theURLs = theEvent.userInfo;
-					if (theURLs.length>0) {
-						var theWindow = safari.application.activeBrowserWindow;
-						var theCurrentTab = theWindow.activeTab;
-						var theFocusSetting = safari.extension.settings.getItem("com.manytricks.UnreadTabs.Focus");
-						var theNewTabLevel = ((theFocusSetting=="current") ? "background" : "foreground");
-						if (safari.extension.settings.getItem("com.manytricks.UnreadTabs.Position")=="next") {
-							var theTabs = theWindow.tabs;
-							var theNumberOfTabs = theTabs.length;
-							var theIndex = 1;
-							var i;
-							if (theNumberOfTabs>1) {
-								for (i = 0; i<theNumberOfTabs; i++) {
-									if (theTabs[i]===theCurrentTab) {
-										theIndex = i + 1;
-										break;
+					if (theURLs) {
+						var theNumberOfURLs = theURLs.length;
+						if (theNumberOfURLs>0) {
+							var theWindow = safari.application.activeBrowserWindow;
+							var theCurrentTab = theWindow.activeTab;
+							var theFocusSetting = safari.extension.settings.getItem('com.manytricks.UnreadTabs.Focus');
+							var theNewTabLevel = ((theFocusSetting=='current') ? 'background' : 'foreground');
+							if (safari.extension.settings.getItem('com.manytricks.UnreadTabs.Position')=='next') {
+								var theTabs = theWindow.tabs;
+								var theNumberOfTabs = theTabs.length;
+								var theIndex = 1;
+								var i;
+								if (theNumberOfTabs>1) {
+									for (i = 0; i<theNumberOfTabs; i++) {
+										if (theTabs[i]===theCurrentTab) {
+											theIndex = i + 1;
+											break;
+										}
 									}
 								}
+								for (i = 0; i<theNumberOfURLs; i++) {
+									theWindow.openTab(theNewTabLevel, theIndex++).url = theURLs[i];
+								}
+							} else {
+								for (i = 0; i<theNumberOfURLs; i++) {
+									theWindow.openTab(theNewTabLevel).url = theURLs[i];
+								}
 							}
-							for (i = 0; i<theURLs.length; i++) {
-								theWindow.openTab(theNewTabLevel, theIndex++).url = theURLs[i];
+							if (theFocusSetting=='close') {
+								theCurrentTab.close();
 							}
-						} else {
-							for (i = 0; i<theURLs.length; i++) {
-								theWindow.openTab(theNewTabLevel).url = theURLs[i];
-							}
+							return;
 						}
-						if (theFocusSetting=="close") {
-							theCurrentTab.close();
-						}
-					} else {
-						alert("No new posts detected on this page");
 					}
+					alert('No new posts detected on this page');	// we should never get here
 				}
 			}, false);
 
