--- a/UnreadTabs.safariextension/Global.html
+++ b/UnreadTabs.safariextension/Global.html
@@ -8,47 +8,61 @@
 			// Copyright © 2013 Many Tricks (When in doubt, consider this MIT-licensed)
 
 			var theApplication = safari.application;
+			var theLatestContextMenuURLs = null;
 
 			theApplication.addEventListener('contextmenu', function (theEvent) {
-				var theURLs = theEvent.userInfo;
-				if (theURLs) {
-					var theNumberOfURLs = theURLs.length;
+				var theUserInfo = theEvent.userInfo;
+				theLatestContextMenuURLs = theUserInfo['com.manytricks.UnreadTabs.URLs'];
+				if (theLatestContextMenuURLs) {
+					var theNumberOfURLs = theLatestContextMenuURLs.length;
 					if (theNumberOfURLs>0) {
-						var theLanguage = navigator.language;
-						var theMenuItemTitle;
-						if (theNumberOfURLs==1)  {
-							switch (theLanguage) {
-								case 'de-at':
-								case 'de-ch':
-								case 'de-de':
-									theMenuItemTitle = 'Ungelesen Beitrag in neuem Tab öffnen';
-									break;
-								default:
-									theMenuItemTitle = 'Open Unread Post in New Tab';
-									break;
-							}
-						} else {
-							switch (theLanguage) {
-								case 'de-at':
-								case 'de-ch':
-								case 'de-de':
-									theMenuItemTitle = theNumberOfURLs + ' ungelesene Beiträge in neuen Tabs öffnen';
-									break;
-								default:
-									theMenuItemTitle = 'Open ' + theNumberOfURLs + ' Unread Posts in New Tabs';
-									break;
+						if (safari.extension.settings.getItem('com.manytricks.UnreadTabs.SkipSubForumPosts')) {
+							var theSubforumFlagsByURL = theUserInfo['com.manytricks.UnreadTabs.SubforumFlags'];
+							var i;
+							for (i = 0; i<theNumberOfURLs; i++) {
+								if (theSubforumFlagsByURL[theLatestContextMenuURLs[i]]) {
+									theLatestContextMenuURLs.splice(i, 1);
+									i--;
+									theNumberOfURLs--;
+								}
 							}
 						}
-						theEvent.contextMenu.appendContextMenuItem('com.manytricks.UnreadTabs.Open', theMenuItemTitle);
+						if (theNumberOfURLs>0) {
+							var theLanguage = navigator.language;
+							var theMenuItemTitle;
+							if (theNumberOfURLs==1)  {
+								switch (theLanguage) {
+									case 'de-at':
+									case 'de-ch':
+									case 'de-de':
+										theMenuItemTitle = 'Ungelesen Beitrag in neuem Tab öffnen';
+										break;
+									default:
+										theMenuItemTitle = 'Open Unread Post in New Tab';
+										break;
+								}
+							} else {
+								switch (theLanguage) {
+									case 'de-at':
+									case 'de-ch':
+									case 'de-de':
+										theMenuItemTitle = theNumberOfURLs + ' ungelesene Beiträge in neuen Tabs öffnen';
+										break;
+									default:
+										theMenuItemTitle = 'Open ' + theNumberOfURLs + ' Unread Posts in New Tabs';
+										break;
+								}
+							}
+							theEvent.contextMenu.appendContextMenuItem('com.manytricks.UnreadTabs.Open', theMenuItemTitle);
+						}
 					}
 				}
 			}, false);
 
 			theApplication.addEventListener('command', function (theEvent) {
 				if (theEvent.command=='com.manytricks.UnreadTabs.Open') {
-					var theURLs = theEvent.userInfo;
-					if (theURLs) {
-						var theNumberOfURLs = theURLs.length;
+					if (theLatestContextMenuURLs) {
+						var theNumberOfURLs = theLatestContextMenuURLs.length;
 						if (theNumberOfURLs>0) {
 							var theWindow = safari.application.activeBrowserWindow;
 							var theCurrentTab = theWindow.activeTab;
@@ -69,11 +83,11 @@
 									}
 								}
 								for (i = 0; i<theNumberOfURLs; i++) {
-									theWindow.openTab(theNewTabLevel, theIndex++).url = theURLs[i];
+									theWindow.openTab(theNewTabLevel, theIndex++).url = theLatestContextMenuURLs[i];
 								}
 							} else {
 								for (i = 0; i<theNumberOfURLs; i++) {
-									theWindow.openTab(theNewTabLevel).url = theURLs[i];
+									theWindow.openTab(theNewTabLevel).url = theLatestContextMenuURLs[i];
 								}
 							}
 							if (theFocusSetting=='close') {
