Changed an instance of "SubForum" to "Subforum". Consistency.

--- a/UnreadTabs.safariextension/Global.html
+++ b/UnreadTabs.safariextension/Global.html
@@ -15,7 +15,7 @@
 				if (theLatestContextMenuURLs) {
 					var theNumberOfURLs = theLatestContextMenuURLs.length;
 					if (theNumberOfURLs>0) {
-						if (safari.extension.settings.getItem('com.manytricks.UnreadTabs.SkipSubForumPosts')) {
+						if (safari.extension.settings.getItem('com.manytricks.UnreadTabs.SkipSubforumPosts')) {
 							var theSubforumFlagsByURL = theEvent.userInfo['com.manytricks.UnreadTabs.SubforumFlags'];
 							var i;
 							for (i = 0; i<theNumberOfURLs; i++) {
