Added an esoteric (for now) "Smart" setting that makes "Focus" behavior depend on the presence of unread posts in subforum summaries.

--- a/UnreadTabs.safariextension/Global.html
+++ b/UnreadTabs.safariextension/Global.html
@@ -89,7 +89,7 @@
 									theWindow.openTab(theNewTabLevel).url = theLatestContextMenuURLs[i];
 								}
 							}
-							if (theFocusSetting=='close') {
+							if ((theFocusSetting=='close') && ((theNumberOfURLs>=theEvent.userInfo['com.manytricks.UnreadTabs.URLs'].length) || (!theSettings.getItem('com.manytricks.UnreadTabs.Focus.Smart')))) {
 								theCurrentTab.close();
 							}
 							return;
