Added an optional toolbar button.

--- a/UnreadTabs.safariextension/Global.html
+++ b/UnreadTabs.safariextension/Global.html
@@ -3,103 +3,7 @@
 	<head>
 		<title>Unread Tabs</title>
 		<meta charset="utf-8">
-		<script type="text/javascript">
-
-			// Copyright © 2013 Many Tricks (When in doubt, consider this MIT-licensed)
-
-			var theApplication = safari.application;
-			var theLatestContextMenuURLs = null;
-
-			theApplication.addEventListener('contextmenu', function (theEvent) {
-				theLatestContextMenuURLs = theEvent.userInfo['com.manytricks.UnreadTabs.URLs'];
-				if (theLatestContextMenuURLs) {
-					var theNumberOfURLs = theLatestContextMenuURLs.length;
-					if (theNumberOfURLs>0) {
-						if (safari.extension.settings.getItem('com.manytricks.UnreadTabs.SkipSubforumPosts')) {
-							var theSubforumFlagsByURL = theEvent.userInfo['com.manytricks.UnreadTabs.SubforumFlags'];
-							var i;
-							for (i = 0; i<theNumberOfURLs; i++) {
-								if (theSubforumFlagsByURL[theLatestContextMenuURLs[i]]) {
-									theLatestContextMenuURLs.splice(i, 1);
-									i--;
-									theNumberOfURLs--;
-								}
-							}
-						}
-						if (theNumberOfURLs>0) {
-							var theLanguage = navigator.language;
-							var theMenuItemTitle;
-							if (theNumberOfURLs==1)  {
-								switch (theLanguage) {
-									case 'de-at':
-									case 'de-ch':
-									case 'de-de':
-										theMenuItemTitle = 'Ungelesen Beitrag in neuem Tab öffnen';
-										break;
-									default:
-										theMenuItemTitle = 'Open Unread Post in New Tab';
-										break;
-								}
-							} else {
-								switch (theLanguage) {
-									case 'de-at':
-									case 'de-ch':
-									case 'de-de':
-										theMenuItemTitle = theNumberOfURLs + ' ungelesene Beiträge in neuen Tabs öffnen';
-										break;
-									default:
-										theMenuItemTitle = 'Open ' + theNumberOfURLs + ' Unread Posts in New Tabs';
-										break;
-								}
-							}
-							theEvent.contextMenu.appendContextMenuItem('com.manytricks.UnreadTabs.Open', theMenuItemTitle);
-						}
-					}
-				}
-			}, false);
-
-			theApplication.addEventListener('command', function (theEvent) {
-				if (theEvent.command=='com.manytricks.UnreadTabs.Open') {
-					if (theLatestContextMenuURLs) {
-						var theNumberOfURLs = theLatestContextMenuURLs.length;
-						if (theNumberOfURLs>0) {
-							var theWindow = safari.application.activeBrowserWindow;
-							var theCurrentTab = theWindow.activeTab;
-							var theSettings = safari.extension.settings;
-							var theFocusSetting = theSettings.getItem('com.manytricks.UnreadTabs.Focus');
-							var theNewTabLevel = ((theFocusSetting=='current') ? 'background' : 'foreground');
-							if (theSettings.getItem('com.manytricks.UnreadTabs.Position')=='next') {
-								var theTabs = theWindow.tabs;
-								var theNumberOfTabs = theTabs.length;
-								var theIndexToInsertAt = 1;
-								var i;
-								if (theNumberOfTabs>1) {
-									for (i = 0; i<theNumberOfTabs; i++) {
-										if (theTabs[i]===theCurrentTab) {
-											theIndexToInsertAt = i + 1;
-											break;
-										}
-									}
-								}
-								for (i = 0; i<theNumberOfURLs; i++) {
-									theWindow.openTab(theNewTabLevel, theIndexToInsertAt++).url = theLatestContextMenuURLs[i];
-								}
-							} else {
-								for (i = 0; i<theNumberOfURLs; i++) {
-									theWindow.openTab(theNewTabLevel).url = theLatestContextMenuURLs[i];
-								}
-							}
-							if ((theFocusSetting=='close') && ((theNumberOfURLs>=theEvent.userInfo['com.manytricks.UnreadTabs.URLs'].length) || (!theSettings.getItem('com.manytricks.UnreadTabs.Focus.Smart')))) {
-								theCurrentTab.close();
-							}
-							return;
-						}
-					}
-					alert('No new posts detected on this page');	// we should never get here
-				}
-			}, false);
-
-		</script>
+		<script src="Global.js" type="text/javascript"></script>
 	</head>
 	<body></body>
 </html>
